--- a/project/package.json
+++ b/project/package.json
@@ -15,6 +15,7 @@
     "swiper": "^11.0.5",
     "vue": "^3.3.11",
     "vue-datepicker": "^1.3.0",
+    "vue-google-charts": "^1.1.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
